2011-05-10 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* Merge from trunk.

2011-05-10 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/z80.h,
	  src/z80/main.c,
	  src/z80/ralloc.c:
	  Reintegrated old register allocator (option --oldralloc).

2011-05-09 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCralloc.hpp,
	  src/z80/ralloc2.cc:
	  Handle the check for result bytes overwriting operand bytes in the conflict graph instead of the cost function.

2011-05-08 Philipp Klaus Krause <pkk@spth.de>

	* src/z80/ralloc2.cc
	  Fixed over-eager early HLinst_OK() use.

2011-05-08 Philipp Klaus Krause <pkk@spth.de>

	* Merge from trunk.

2011-05-06 Philipp Klaus Krause <pkk@spth.de>

	* src/z80/gen.c:
	  Remove some leftover debug stuff.
	* src/z80/peeph-z80.def:
	  Generalize optimization of bit setting and resetting.

2011-05-06 Philipp Klaus Krause <pkk@spth.de>

	* Merge everything except src/z80/gen.c from trunk,
	  but mark gen.c as merged, so that further changes in gen.c
	  will be merged.

2011-05-03 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCralloc.hpp,
	  src/z80/ralloc2.cc
	  Improved performance, reduced memory usage.

2011-05-02 Borut Razem <borut.razem AT gmail.com>

	* configure.in, configure:
	  don't use "-pipe" on x86 Solaris g++, since src/z80/ralloc2.cc dies

2011-04-29 Philipp Klaus Krause <pkk@spth.de>

	* Merge everything except src/z80/gen.c from trunk.

2011-04-29 Philipp Klaus Krause <pkk@spth.de>

	* src/SDCCralloc.hpp,
	  src/z80/ralloc2.cc
	  Some performance improvements.

2011-04-25 Philipp Klaus Krause <pkk@spth.de>

	* Merge everything except src/z80/gen.c from trunk.

2011-04-25 Maarten Brock <sourceforge.brock AT dse.nl>

	* debugger/mcs51/cmd.c,
	* debugger/mcs51/symtab.c,
	* src/z80/ralloc2.cc: fixed some warnings
	* sdas/linksrc/aslink.vcxproj,
	* sdas/linksrc/aslink.vcxproj.filters: added lksdcdb.c
	* src/src.vcxproj,